# chatroom

ChatRoom/: CMakeLists.txt  README.md
ChatRoom/CMake/: compilation.cmake  netlib.cmake
ChatRoom/Client/: CMakeLists.txt
ChatRoom/Client/Source/: NetClient.cpp  NetClient.h  main.cpp
ChatRoom/Server/: CMakeLists.txt
ChatRoom/Server/Source/: NetServer.cpp  NetServer.h  main.cpp
ChatRoom/Shared/Include/: Printer.h
ChatRoom/Shared/Source/: Printer.cpp
